<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
android:id="@+id/widget0"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<TextView
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/TipCalculator"
/>
<TextView
android:id="@+id/widget28"
android:layout_width="99dp"
android:layout_height="17dp"
android:text="@string/AmountofBill"
android:layout_x="40dp"
android:layout_y="32dp"
>
</TextView>
<TextView
android:id="@+id/widget29"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/PercentagetoTip"
android:layout_x="40dp"
android:layout_y="82dp"
>
</TextView>
<TextView
android:id="@+id/widget30"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/NumberofPeople"
android:layout_x="40dp"
android:layout_y="132dp"
>
</TextView>
<TextView
android:id="@+id/widget31"
android:layout_width="wrap_content"
android:layout_height="18dp"
android:text="@string/TipAmount"
android:layout_x="40dp"
android:layout_y="262dp"
>
</TextView>
<TextView
android:id="@+id/widget32"
android:layout_width="wrap_content"
android:layout_height="18dp"
android:text="@string/TotalPerPerson"
android:layout_x="40dp"
android:layout_y="352dp"
>
</TextView>
<TextView
android:id="@+id/widget33"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/TotalPayableAmount"
android:layout_x="40dp"
android:layout_y="302dp"
>
</TextView>
<Button
android:id="@+id/btncalculate"
android:layout_width="99dp"
android:layout_height="wrap_content"
android:text="@string/Calculate"
android:layout_x="40dp"
android:layout_y="182dp"
>
</Button>
<Button
android:id="@+id/btnreset"
android:layout_width="86dp"
android:layout_height="wrap_content"
android:text="@string/Reset"
android:layout_x="140dp"
android:layout_y="182dp"
>
</Button>
<EditText
android:id="@+id/txtbillamount"
android:layout_width="wrap_content"
android:layout_height="35dp"
android:text=" "
android:textSize="18sp"
android:layout_x="200dp"
android:layout_y="22dp"
>
</EditText>
<EditText
android:id="@+id/txtpercentage"
android:layout_width="51dp"
android:layout_height="36dp"
android:text=" "
android:textSize="18sp"
android:layout_x="200dp"
android:layout_y="72dp"
>
</EditText>
<EditText
android:id="@+id/txtpeople"
android:layout_width="wrap_content"
android:layout_height="39dp"
android:text=" "
android:textSize="18sp"
android:layout_x="200dp"
android:layout_y="122dp"
>
</EditText>
<TextView
android:id="@+id/txttipamount"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text=""
android:layout_x="200dp"
android:layout_y="262dp"
>
</TextView>
<TextView
android:id="@+id/txttotal"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text=""
android:layout_x="200dp"
android:layout_y="302dp"
>
</TextView>
<TextView
android:id="@+id/txtperperson"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text=""
android:layout_x="200dp"
android:layout_y="352dp"
>
</TextView>
</AbsoluteLayout>